corrected some spelling and added a shopping cart function to optimum lift

--- a/index.html
+++ b/index.html
@@ -75,16 +75,35 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
       <div id="tech-stack">
         <h3>Tech stack &nbsp; <span>|</span>&nbsp;</h3>
         <div>
-          <img src="./img/HTML.svg" alt="HTML" /><img
-            src="./img/CSS.svg"
-            alt="CSS"
-          /><img src="./img/JS.svg" alt="JavaScript" /><img
-            src="./img/SCSS.svg"
-            alt="SCSS"
-          /><img src="./img/bootstrap.svg" alt="BootStrap" /><img
-            src="./img/splidejs.png"
-            alt="splidejs"
-          />
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+            target="_blank"
+            ><img src="./img/HTML.svg" alt="HTML"
+          /></a>
+
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+            target="_blank"
+          >
+            <img src="./img/CSS.svg" alt="CSS" />
+          </a>
+
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+            target="_blank"
+            ><img src="./img/JS.svg" alt="JavaScript"
+          /></a>
+
+          <a href="https://sass-lang.com/" target="_blank">
+            <img src="./img/SCSS.svg" alt="SCSS" />
+          </a>
+          <a href="https://getbootstrap.com/" target="_blank"
+            ><img src="./img/bootstrap.svg" alt="BootStrap"
+          /></a>
+
+          <a href="https://splidejs.com/" target="_blank">
+            <img src="./img/splidejs.png" alt="splidejs" />
+          </a>
         </div>
       </div>
     </section>
@@ -101,13 +120,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             creating a user-centric experience.
           </p>
           <p class="project-tech">
-            I used Figma to design the website, and HTML,CSS and JS to bring the
-            website to life.
+            I used Figma to design the website, and HTML, CSS and JS to bring
+            the website to life.
           </p>
           <p class="project-code">
-            <a href="#">
-              Code &nbsp;<i class="fa-brands fa-github fa-lg"></i
-            ></a>
             <a href="/optimum-lift/" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
@@ -123,20 +139,17 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         <div class="project-info">
           <h2><span class="blue">02</span>/Travellian</h2>
           <p class="project-dsc">
-            A website template made to choose destinations to travel to diffrent
-            countries and specific places. This project really let me to
-            practice and perfect my skills with the splide framework as each
+            A website template made to choose destinations to visit and travel
+            to diffrent countries and specific places. This project was perfect
+            to practice and perfect my skills with the splide framework as each
             section has some kind of slider, whether that be a image slider or
             user reviews.
           </p>
           <p class="project-tech">
-            I made use of HTML,CSS, JS & Splide to bring the website to life and
-            Figma to translate the design pixel perfect to a website.
+            I made use of HTML, CSS, JS & Splide to bring the website to life
+            and Figma to translate the design to a functional website.
           </p>
           <p class="project-code">
-            <a href="#">
-              Code &nbsp;<i class="fa-brands fa-github fa-lg"></i
-            ></a>
             <a href="/travellian/" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
@@ -153,16 +166,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <h2><span class="blue">03</span>/Psychology Elevation</h2>
           <p class="project-dsc">
             This project was a way for me to apply all the things I learned that
-            were BootStrap related, this website is made only with BootStrap and
-            no JavaScript as I wanted to push myself with this framework.
+            were BootStrap related, this website is entirely made with BootStrap
+            as I wanted to push myself further with this framework.
           </p>
           <p class="project-tech">
             I utilized only HTML and BootStrap to craft this website.
           </p>
           <p class="project-code">
-            <a href="#">
-              Code &nbsp;<i class="fa-brands fa-github fa-lg"></i
-            ></a>
             <a href="/psychology-elevation/" loading="lazy" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
@@ -183,16 +193,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             Rezilla is a website-template made to buy & sell or rent properties.
             This project was a great opportunity to advance my knowledge of
             flexbox and grid CSS. Also was a great way to get comfortable with
-            the position element.
+            APIs.
           </p>
           <p class="project-tech">
             The project is mostly HTML and CSS with a bit of JavaScript. Figma
             was used for the design.
           </p>
           <p class="project-code">
-            <a href="#">
-              Code &nbsp;<i class="fa-brands fa-github fa-lg"></i
-            ></a>
             <a href="/Rezilla/" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
