replaced resume page with my actual CV

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             <a href="index.html"><li>Home</li></a>
             <a href="#projects"><li>Projects</li></a>
             <a href="#contactme"><li>Contact</li></a>
-            <a href="resume.html"><li>Resume</li></a>
+            <a
+              href="https://rxresu.me/brilantkrasniqi/brilant-krasniqi-front-end"
+              target="_blank"
+              ><li>Resume</li></a
+            >
           </ul>
         </div>
       </div>
@@ -45,7 +49,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <a href="index.html"><li class="mobile-l">Home</li></a>
           <a href="#projects"><li class="mobile-l">Projects</li></a>
           <a href="#contactme"><li class="mobile-l">Contact</li></a>
-          <a href="resume.html"
+          <a
+            href="https://rxresu.me/brilantkrasniqi/brilant-krasniqi-front-end"
+            target="_blank"
             ><li class="mobile-l" id="last-nav">Resume</li></a
           >
         </ul>
