added some links

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
   <body>
     <header id="sticky">
       <div class="container" id="header">
-        <h2>Brilant Krasniqi</h2>
+        <a href="index.html"><h2>Brilant Krasniqi</h2></a>
         <div id="nav">
           <ul>
             <a href="index.html"><li>Home</li></a>
@@ -38,7 +38,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         </div>
       </div>
       <div class="container" id="mobile-header">
-        <h3>Brilant Krasniqi</h3>
+        <a href="index.html"><h3>Brilant Krasniqi</h3></a>
         <div id="hamburger"><span></span><span></span><span></span></div>
         <ul id="mobile-ul">
           <a href="index.html"><li class="mobile-l">Home</li></a>
