--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             Hi, I'm Brilant a <span class="blue">Front-end</span> Developer
           </h2>
           <p>
-            With a passion to create and build intuitive and engaging websites.
-            A background in psychology bring me a unique perspective to every
-            project, blending creativity with an understaning of human
-            behaviour. Let's build something amazing together!
+            Driven by a passion for creating intuitive and engaging websites, I
+            bring a unique perspective to every project with a differentiating
+            background in psychology. This blend of creativity and understanding
+            of human behavior allows me to craft user-friendly, impactful
+            experiences. Let's collaborate and build something amazing together!
           </p>
         </div>
       </div>
