--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <a href="https://splidejs.com/" target="_blank">
             <img src="./img/splidejs.png" alt="splidejs" />
           </a>
+
+          <a href="https://wordpress.org/" target="_blank">
+            <img src="./img/wordpress.svg" alt="wordpress" />
+          </a>
         </div>
       </div>
     </section>
@@ -138,33 +142,39 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         </div>
         <div class="project-img">
           <a href="/optimum-lift/" target="_blank"
-            ><img src="./img/Optimum Lift.png" loading="lazy" alt="OptimumLift"
+            ><img
+              src="./img/optimum-lift_.png"
+              loading="lazy"
+              alt="OptimumLift"
           /></a>
         </div>
       </div>
       <div class="project-reverse">
         <div class="project-info">
-          <h2><span class="blue">02</span>/Travellian</h2>
+          <h2><span class="blue">02</span>/Sport Fishing Spain</h2>
           <p class="project-dsc">
-            A website template made to choose destinations to visit and travel
-            to diffrent countries and specific places. This project was perfect
-            to practice and perfect my skills with the splide framework as each
-            section has some kind of slider, whether that be a image slider or
-            user reviews.
+            Sport Fishing Spain is a website build with WordPress using
+            Elementor, made to book fishing trips including different boats,
+            equipment and accommodation. When the user chooses the dates and
+            required info it sends the information to the business so they can
+            send back a quote.
           </p>
           <p class="project-tech">
-            I made use of HTML, CSS, JS & Splide to bring the website to life
-            and Figma to translate the design to a functional website.
+            The project is made utilizing WordPress and different plug-ins.
           </p>
           <p class="project-code">
-            <a href="/travellian/" target="_blank">
+            <a href="https://sportfishingspain.com/" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </p>
         </div>
         <div class="project-img">
-          <a href="/travellian/" loading="lazy" target="_blank"
-            ><img id="reverse" src="./img/Travellian.png" alt="Travellian"
+          <a href="https://sportfishingspain.com/" target="_blank">
+            <img
+              id="reverse"
+              src="./img/sportfishingspain.com_.png"
+              loading="lazy"
+              alt="Sport Fishing Spain"
           /></a>
         </div>
       </div>
@@ -195,30 +205,27 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
       </div>
       <div class="project-reverse">
         <div class="project-info">
-          <h2><span class="blue">04</span>/Rezilla</h2>
+          <h2><span class="blue">04</span>/Travellian</h2>
           <p class="project-dsc">
-            Rezilla is a website-template made to buy & sell or rent properties.
-            This project was a great opportunity to advance my knowledge of
-            flexbox and grid CSS. Also was a great way to get comfortable with
-            APIs.
+            A website template made to choose destinations to visit and travel
+            to diffrent countries and specific places. This project was perfect
+            to practice and perfect my skills with the splide framework as each
+            section has some kind of slider, whether that be a image slider or
+            user reviews.
           </p>
           <p class="project-tech">
-            The project is mostly HTML and CSS with a bit of JavaScript. Figma
-            was used for the design.
+            I made use of HTML, CSS, JS & Splide to bring the website to life
+            and Figma to translate the design to a functional website.
           </p>
           <p class="project-code">
-            <a href="/Rezilla/" target="_blank">
+            <a href="/travellian/" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </p>
         </div>
         <div class="project-img">
-          <a href="/Rezilla/" target="_blank">
-            <img
-              id="reverse"
-              src="./img/Rezilla.png"
-              loading="lazy"
-              alt="Travellian"
+          <a href="/travellian/" loading="lazy" target="_blank"
+            ><img id="reverse" src="./img/Travellian.png" alt="Travellian"
           /></a>
         </div>
       </div>
