--- a/optimum-lift/index.html
+++ b/optimum-lift/index.html
@@ -135,6 +135,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
           <div class="hero-btns">
             <a href="checkout.html">
+              <div id="product-component-1725972317740"></div>
+
               <button class="blue hero-btn1">Buy Now</button></a
             >
             <a href="learn-more.html"
