added a download link to resume

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             <a href="#projects"><li>Projects</li></a>
             <a href="#contactme"><li>Contact</li></a>
             <a
-              href="https://rxresu.me/brilantkrasniqi/brilant-krasniqi-front-end"
+              href="https://storage.rxresu.me/clp9fveq13rf49hun89pvajqf/resumes/Brilant Krasniqi Front End.pdf"
               target="_blank"
               ><li>Resume</li></a
             >
@@ -49,8 +49,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <a href="index.html"><li class="mobile-l">Home</li></a>
           <a href="#projects"><li class="mobile-l">Projects</li></a>
           <a href="#contactme"><li class="mobile-l">Contact</li></a>
+
           <a
-            href="https://rxresu.me/brilantkrasniqi/brilant-krasniqi-front-end"
+            href="https://storage.rxresu.me/clp9fveq13rf49hun89pvajqf/resumes/Brilant Krasniqi Front End.pdf"
             target="_blank"
             ><li class="mobile-l" id="last-nav">Resume</li></a
           >
